# ci40-click-apps

./: CMakeLists.txt  README.md  project.config
src/: CMakeLists.txt  bargraph_click_app.c  gpio.c  gpio.h  motion_click_app.c  pwm_common.c  pwm_common.h  spi_common.c  spi_common.h
